--- a/src/features/header/Header.css
+++ b/src/features/header/Header.css
@@ -1,7 +1,6 @@
 .header-container {
   display: flex;
   justify-content: center;
-  gap: 0.5rem;
   padding: 1.5rem 1rem;
   background-color: rgb(188, 188, 188);
 }
@@ -13,4 +12,29 @@
 
 .header__title {
   text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+}
+
+.header__link {
+  text-decoration: none;
+  display: flex;
+  gap: 0.5rem;
+}
+
+@media (min-width: 1440px) {
+  .header-container {
+    padding: 2rem 3rem;
+    gap: 1rem;
+  }
+
+  .header__logo {
+    width: 3rem;
+    height: 3rem;
+    margin: auto 0;
+  }
+
+  .header__title {
+    font-size: 4rem;
+  }
 }
