--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: "Rajdhani";
-  src: local("Rajdhani"),
-    url(../public/assets/fonts/Rajdhani/Rajdhani-Regular.ttf) format("truetype");
+  font-family: 'Rajdhani';
+  src: local('Rajdhani'),
+    url(../public/assets/fonts/Rajdhani/Rajdhani-Regular.ttf) format('truetype');
 }
 
 .App {
   text-align: center;
-  font-family: "Rajdhani", "Courier New", Courier, monospace;
+  font-family: 'Rajdhani', 'Courier New', Courier, monospace;
 }
