--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,13 @@
 * {
   text-align: center;
 }
+
+.robots-subtitle {
+  width: fit-content;
+  margin: auto;
+  margin-top: 2rem;
+  font-size: 2rem;
+  border: 2px solid black;
+  border-radius: 1rem;
+  padding: 0.5rem 1rem;
+}
